# dex-liquidity-anomaly-detection-vertex-ai

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Makefile  README.md  cloudbuild.yaml  dex_liquidity_raw-pipeline.json  protocols.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: _bootstrap-terraform.yml  _terraform-plan.yml  bootstrap-apply-dev.yml  bootstrap-apply-prod.yml  bootstrap-plan-dev.yml  bootstrap-plan-prod.yml  build-and-deploy.yml  build-fetcher.yml  cloudbuild-trigger.yml  terraform-apply-dev.yml  terraform-apply-prod.yml  terraform-modules-test.yml  terraform-plan-dev.yml  terraform-plan-prod.yml
app/: streamlit_app.py
docker/fetcher/: Dockerfile  requirements.txt
docker/kfp/: Dockerfile
infra/: Makefile  iam.tf  locals.tf  main.tf  outputs.tf  sa_batch_prediction.tf  sa_data_prep.tf  sa_model_registry.tf  sa_ops.tf  sa_orchestrator.tf  sa_prediction.tf  sa_training.tf  variables.tf  versions.tf
macros/: json_extract.sql  pool_hourly_base.sql
pipelines/: dex_raw_pipeline.py  hourly_prediction.py  import_feature_values.py
scripts/: archive_duplicated_data.py  import_volume_spike_model.py  init_model.sh  loader.py  logging_config.py  run_pipeline.py  setup_duckdb.sql  start_bento.sh  train_iforest.py
src/models/: predict.py
terraform/: .terraform.lock.hcl  Makefile  README.md  feature_import.tf  iam.tf  iam_tf_sa.tf  locals.tf  main.tf  outputs.tf  providers.tf  secret_access.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py
(+113 files in other folders)
