[project]
name = "dex-liquidity-anomaly-detection-vertex-ai"
version = "0.1.0"
description = ""
authors = [{ name = "Kazunori Osaki", email = "claudioropez.k@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "kfp (>=2.13.0,<3.0.0)",
    "google-cloud-aiplatform (>=1.93.0,<2.0.0)",
    "google-cloud-bigquery (>=3.33.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "dill (>=0.4.0,<0.5.0)",
    "google-cloud-pipeline-components (>=2.20.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pytest = "^8.3.5"
functions-framework = "^3.8.3"
